--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">WeatherApp</string>
+    <string name="heat_degree_format" tools:ignore="ExtraTranslation">%s °c</string>
+    <string name="seomthing_went_wrong">SomeThing Went Wrong !!</string>
+    <string name="internet_connection_msg">Internet Connection Issue, Please Check Your Network</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
